--- a/success.html
+++ b/success.html
@@ -12,7 +12,7 @@ import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js
 
 const supabase = createClient(
   'https://qwpiggqeyctejvrgjxim.supabase.co', 
-  'YOUR_SUPABASE_ANON_KEY' // put your anon key here
+  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF3cGlnZ3FleWN0ZWp2cmdqeGltIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1MTgwMjMsImV4cCI6MjA4NjA5NDAyM30.ZLUSkcb8fPtb6VoR4fIeQUEuZhG1cwPrjajll-Tw12Y' // my anon key
 )
 
 async function verifyPayment() {
